Change equality check of files to be a confidence level, which is calculated based on the equality of the result files.
