# src/main/java/p7gruppe/p7/offloading/data/enitity/JobEntity.java
@@ -21,6 +21,7 @@ public class JobEntity {
     public JobStatus jobStatus;
     public int timeoutInMinutes;
     public int priority;
+    public double confidenceLevel;
 
 
     public JobEntity(UserEntity employer, String jobPath, String name, int answersNeeded, int timeoutInMinutes) {
@@ -81,5 +82,13 @@ public class JobEntity {
 
     public void setPriority(int priority) {
         this.priority = priority;
+    }
+
+    public double getConfidenceLevel() {
+        return confidenceLevel;
+    }
+
+    public void setConfidenceLevel(double confidenceLevel) {
+        this.confidenceLevel = confidenceLevel;
     }
 }
