# src/main/resources/openapi-definition.yaml
@@ -38,6 +38,9 @@ components:
           type: integer
         timeoutInMinutes:
           type: integer
+        confidenceLevel:
+          type: number
+          format: double
 
     Statistics:
       type: object
@@ -107,7 +110,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserCredentials'
-        # Todo : Error code, user already exists
 
     get:
       tags:
